paste/ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paste-service
  labels:
    app: paste
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: paste
